--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-hook-form": "^7.44.3",
     "react-router-dom": "^6.12.0",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.7.11",
     "swiper": "^9.3.2"
   },
   "devDependencies": {
